[package]
name = "glyphon-tessera-fork"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.9.3"
edition = "2021"
homepage = "https://github.com/shadow3aaa/glyphon-tessera-fork"
repository = "https://github.com/shadow3aaa/glyphon-tessera-fork"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = { version = "26.0.1", default-features = false, features = ["wgsl"] }
etagere = "0.2.10"
cosmic-text = { version = "0.15.4", package = "cosmic-text-tessera-fork" }
lru = { version = "0.16", default-features = false }
rustc-hash = "2.1.1"

[dev-dependencies]
winit = "0.30.12"
wgpu = "26.0.1"
resvg = { version = "0.45", default-features = false }
pollster = "0.4.0"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "prepare"
harness = false
